app2/overlay/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
spec:
  #replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
       imagePullSecrets:
        - name: production-registry
       containers:
        - name: app2
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          image: ghcr.io/letrung910/monorepo/app2:dev
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
            # requests:
            #   memory: "100Mi"
            #   cpu: "100m"
