app2/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    # nginx.ingress.kubernetes.io/limit-connections: "10000"
    # nginx.ingress.kubernetes.io/limit-rps: "500"
    # nginx.ingress.kubernetes.io/enable-cors: "false"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/server-snippet: |-
    #   location ~* .(actuator) {
    #     deny all;
    #     return 403;
    #   }
spec:
  tls:
  - hosts:
    - dev.abc.com
    secretName: abc-com
  rules:
  - host: dev.abc.com
    http:
      paths:
      - path: /app2
        pathType: Prefix
        app2:
          service:
            name: app2
            port:
              number: 80
